--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <li>Insurance rate: <%= @credit.insurance_rate %>%</li>
   </ul>
 
-  <p>Insurance cost:</p>
+  <p>Insurance cost: <%= @credit.insurance_cost.to_i %>€</p>
   <p>Interest amount:</p>
   <p>Monthly instalment:</p>
 </div>
