rename column as guarantee_fee

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <li>Borrowed amount: <%= @credit.borrowed_amount %>€</li>
     <li>Duration: <%= @credit.duration %> months</li>
     <li>Nominal rate: <%= @credit.nominal_rate %>%</li>
-    <li>Guarantee fee: <%= @credit.guarante_fee %>€</li>
+    <li>Guarantee fee: <%= @credit.guarantee_fee %>€</li>
     <li>Application fee: <%= @credit.application_fee %>€</li>
     <li>Insurance rate: <%= @credit.insurance_rate %>%</li>
   </ul>
