--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,13 +3,13 @@
   <ul>
     <li>Borrowed amount: <%= @credit.borrowed_amount %>€</li>
     <li>Duration: <%= @credit.duration %> months</li>
-    <li>Nominal rate: <%= @credit.nominal_rate %>%</li>
+    <li>Nominal rate: <%= '%.2f' % @credit.nominal_rate %>%</li>
     <li>Guarantee fee: <%= @credit.guarantee_fee %>€</li>
     <li>Application fee: <%= @credit.application_fee %>€</li>
-    <li>Insurance rate: <%= @credit.insurance_rate %>%</li>
+    <li>Insurance rate: <%= '%.2f' % @credit.insurance_rate %>%</li>
   </ul>
 
   <p>Insurance cost: <%= @credit.insurance_cost.to_i %>€</p>
   <p>Interest amount:</p>
-  <p>Monthly instalment:</p>
+  <p>Monthly instalment: <%= '%.2f' % @credit.interests %>€</p>
 </div>
