added method to calculate interests

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,6 @@
   </ul>
 
   <p>Insurance cost: <%= @credit.insurance_cost.to_i %>€</p>
-  <p>Interest amount:</p>
-  <p>Monthly instalment: <%= '%.2f' % @credit.interests %>€</p>
+  <p>Interest amount: <%= '%.2f' % @credit.interests_amount %>€</p>
+  <p>Monthly instalment: <%= '%.2f' % @credit.monthly_instalment %>€</p>
 </div>
