--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <%= simple_form_for(@new_credit) do |f| %>
-    <%= f.input :borrowed_amount %>
-    <%= f.input :duration %>
-    <%= f.input :nominal_rate %>
-    <%= f.input :guarantee_fee %>
-    <%= f.input :application_fee %>
-    <%= f.input :brokerage_fee %>
-    <%= f.input :insurance_rate %>
+    <%= f.input :borrowed_amount, input_html: { min: 0 } %>
+    <%= f.input :duration, input_html: { min: 0 } %>
+    <%= f.input :nominal_rate, input_html: { min: 0 } %>
+    <%= f.input :guarantee_fee, input_html: { min: 0 } %>
+    <%= f.input :application_fee, input_html: { min: 0 } %>
+    <%= f.input :brokerage_fee, input_html: { min: 0 } %>
+    <%= f.input :insurance_rate, input_html: { min: 0 } %>
     <%= f.submit 'Calculer' %>
   <% end %>
 </div>
