--- a/app/views/credits/show.html.erb
+++ b/app/views/credits/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
   <h1>Test Credit</h1>
   <ul>
     <li>Montant emprunté: <%= @credit.borrowed_amount %>€</li>
@@ -21,4 +22,6 @@
   <p>Montant total à rembourser: <%= @credit.include_all_fee.round %>€</p>
   <br>
   <h6>TAEG: <%= @credit.calculate_aprc.round(2) %>%</h6>
+
+  <%= link_to 'Modifier informations', edit_credit_path(@credit) %>
 </div>
