--- a/app/views/credits/new.html.erb
+++ b/app/views/credits/new.html.erb
@@ -1,1 +1,6 @@
+<div class="container w-50 text-center py-3">
+  <h4>Calculez votre taux annuel effectif global (TGAE)</h3>
+  <h6>Soyez sûr de votre prêt</h6>
+</div>
+
 <%= render 'form_credit', credit: @credit %>
