--- a/app/views/credits/_form_credit.html.erb
+++ b/app/views/credits/_form_credit.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container w-50 mt-3 pb-4">
   <%= simple_form_for(credit) do |f| %>
-    <%= f.input :borrowed_amount, input_html: { min: 0 }, label: 'Montant emprunté', required: false %>
-    <%= f.input :duration, input_html: { min: 0 }, label: "Durée de l'emprunt", required: false %>
-    <%= f.input :nominal_rate, input_html: { min: 0 }, label: 'Taux nominal', required: false, required: false %>
-    <%= f.input :guarantee_fee, input_html: { min: 0 }, label: 'Frais de garanties', required: false %>
-    <%= f.input :application_fee, input_html: { min: 0 }, label: 'Frais de dossier', required: false %>
-    <%= f.input :brokerage_fee, input_html: { min: 0 }, label: 'Frais de courtage', required: false %>
-    <%= f.input :insurance_rate, input_html: { min: 0 }, label: 'Taux assurance', required: false %>
-    <%= f.submit 'Calculer' %>
+    <%= f.input :borrowed_amount, input_html: { min: 0 }, label: 'Montant emprunté', required: false, placeholder: '150 000€' %>
+    <%= f.input :duration, input_html: { min: 0 }, label: "Durée de l'emprunt (en mois)", required: false, placeholder: '240' %>
+    <%= f.input :nominal_rate, input_html: { min: 0 }, label: 'Taux nominal', required: false, required: false, placeholder: '1.5%' %>
+    <%= f.input :guarantee_fee, input_html: { min: 0 }, label: 'Frais de garanties', required: false, placeholder: '1 200€' %>
+    <%= f.input :application_fee, input_html: { min: 0 }, label: 'Frais de dossier', required: false, placeholder: '450€' %>
+    <%= f.input :brokerage_fee, input_html: { min: 0 }, label: 'Frais de courtage', required: false, placeholder: '600€' %>
+    <%= f.input :insurance_rate, input_html: { min: 0 }, label: 'Taux assurance', required: false, placeholder: '0.4%' %>
+    <%= f.submit 'Calculer', class: 'btn btn-success w-100 form-button' %>
   <% end %>
 </div>
