--- a/app/views/credits/edit.html.erb
+++ b/app/views/credits/edit.html.erb
@@ -1,1 +1,5 @@
+<div class="container w-50 text-center py-3">
+  <h4>Modifiez vos informations</h3>
+</div>
+
 <%= render 'form_credit', credit: @credit %>
