--- a/app/views/credits/show.html.erb
+++ b/app/views/credits/show.html.erb
@@ -1,25 +1,25 @@
 <div class="container">
   <h1>Test Credit</h1>
   <ul>
-    <li>Montant emprunté: <%= @credit.borrowed_amount %>€</li>
+    <li>Montant emprunté: <%= number_with_delimiter(@credit.borrowed_amount, delimiter: ' ') %>€</li>
     <li>Durée de l'emprunt: <%= @credit.duration_in_years %> ans</li>
     <li>Taux nominal: <%= @credit.nominal_rate %>%</li>
-    <li>Frais de garantie: <%= @credit.guarantee_fee %>€</li>
-    <li>Frais de dossier: <%= @credit.application_fee %>€</li>
-    <li>Frais de courtage: <%= @credit.brokerage_fee %>€</li>
+    <li>Frais de garantie: <%= number_with_delimiter(@credit.guarantee_fee, delimiter: ' ') %>€</li>
+    <li>Frais de dossier: <%= number_with_delimiter(@credit.application_fee, delimiter: ' ') %>€</li>
+    <li>Frais de courtage: <%= number_with_delimiter(@credit.brokerage_fee, delimiter: ' ') %>€</li>
     <li>Taux d'assurance: <%= @credit.insurance_rate %>%</li>
   </ul>
 
-  <p>Coût assurance: <%= @credit.insurance_cost.to_i %>€</p>
-  <p>Montant des intérêts: <%= @credit.interests_amount.round %>€</p>
+  <p>Coût assurance: <%= number_with_delimiter(@credit.insurance_cost.to_i, delimiter: ' ') %>€</p>
+  <p>Montant des intérêts: <%= number_with_delimiter(@credit.interests_amount.round, delimiter: ' ') %>€</p>
   <br>
-  <p>Mensualité: <%= '%.2f' % @credit.monthly_instalment %>€</p>
-  <p>Mensualité avec assurance: <%= '%.2f' % @credit.monthly_instalment_w_insurance %>€</p>
+  <p>Mensualité: <%= number_with_delimiter(@credit.monthly_instalment, delimiter: ' ') %>€</p>
+  <p>Mensualité avec assurance: <%= number_with_delimiter(@credit.monthly_instalment_w_insurance, delimiter: ' ') %>€</p>
   <br>
-  <p>Coût du crédit sans assurance: <%= @credit.credit_cost.round %>€</p>
-  <p>Coût du crédit avec assurance: <%= @credit.credit_cost_w_insurance.round %>€</p>
+  <p>Coût du crédit sans assurance: <%= number_with_delimiter(@credit.credit_cost.round, delimiter: ' ') %>€</p>
+  <p>Coût du crédit avec assurance: <%= number_with_delimiter(@credit.credit_cost_w_insurance.round, delimiter: ' ') %>€</p>
   <br>
-  <p>Montant total à rembourser: <%= @credit.include_all_fee.round %>€</p>
+  <p>Montant total à rembourser: <%= number_with_delimiter(@credit.include_all_fee.round, delimiter: ' ') %>€</p>
   <br>
   <h6>TAEG: <%= @credit.calculate_aprc.round(2) %>%</h6>
 
