--- a/app/assets/stylesheets/credits/_show.scss
+++ b/app/assets/stylesheets/credits/_show.scss
@@ -1,7 +1,9 @@
+.card-result-calcul,
 .card-info-credit {
-  width: 200px;
+  width: 250px;
 }
 
+.details-calcul,
 .details-credit-user {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -9,7 +11,13 @@
   justify-items: center;
 }
 
+.result-calcul,
 .result-input-credit-user {
   font-weight: 600;
   border-bottom: 1px solid #5F8D4E;
+}
+
+.result-calcul-name-from-input,
+.result-name-input-user {
+  margin-bottom: 8px;
 }
