added button on home and hide form

--- a/app/views/credits/show.html.erb
+++ b/app/views/credits/show.html.erb
@@ -52,7 +52,7 @@
       <span class="result-calcul pb-3"><%= number_with_delimiter(@credit.monthly_instalment, delimiter: ' ') %>€</span>
     </div>
     <div class="card-result-calcul">
-      <p class="result-calcul-name-from-input">Mensualité avec assurance :</p>
+      <p class="result-calcul-name-from-input">Mensualité avec l'assurance :</p>
       <span class="result-calcul pb-3"><%= number_with_delimiter(@credit.monthly_instalment_w_insurance, delimiter: ' ') %>€</span>
     </div>
     <div class="card-result-calcul">
