--- a/app/views/credits/new.html.erb
+++ b/app/views/credits/new.html.erb
@@ -3,4 +3,8 @@
   <h6>Soyez sûr de votre prêt</h6>
 </div>
 
+<div class="container w-50 text-center contain-button-home">
+  <%= link_to 'Essayer vous même', '#', class: 'btn btn-success form-button' %>
+</div>
+
 <%= render 'form_credit', credit: @credit %>
