added controller and target in html

--- a/app/views/credits/new.html.erb
+++ b/app/views/credits/new.html.erb
@@ -3,8 +3,10 @@
   <h6>Soyez sûr de votre prêt</h6>
 </div>
 
-<div class="container w-50 text-center contain-button-home">
-  <%= link_to 'Essayer vous même', '#', class: 'btn btn-success form-button' %>
-</div>
+<div data-controller='display-form'>
+  <div class="container w-50 text-center contain-button-home" data-display-form-target='buttonHome'>
+    <%= link_to 'Essayer vous même', '#', class: 'btn btn-success form-button' %>
+  </div>
 
-<%= render 'form_credit', credit: @credit %>
+  <%= render 'form_credit', credit: @credit %>
+</div>
